--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,5 +28,5 @@ jobs:
         with:
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/raman_viewer:latest
-            ghcr.io/${{ github.repository_owner }}/raman_viewer:${{ github.sha }}
+            ghcr.io/sl0n77/raman_viewer:latest
+            ghcr.io/sl0n77/raman_viewer:${{ github.sha }}
